update finishing  create the best project

--- a/style.css
+++ b/style.css
@@ -192,3 +192,73 @@ section.aboutus div p {
 section.aboutus div p::first-letter{
     font-size: 200%;
 }
+
+/*services*/
+
+section.services {
+    max-width: 1200px;
+    margin: auto;
+}
+
+section.services div {
+    width:27.33%;
+    max-width: 350px;
+    max-height: 400px;
+    float: left;
+    margin: 2%;
+    background: #eee;
+    padding: 1%;
+    border-radius: 15px;
+}
+
+section.services div h2 {
+    text-align: center;
+    margin-bottom: 3px;
+    color: #fff;
+    border-radius: 10px;
+}
+
+section.services div p {
+    text-align: center;
+    font-size: 110%;
+    border-radius: 10px;
+    color: #fff;
+    font-style: italic;
+}
+
+section.services div ul {
+    width: 90%;
+    margin: 3% auto;
+    color: #555;
+}
+
+section.services div ul li:before {
+    content: url(images/check.png);
+    margin-left: 5px;
+}
+
+section.services div h3 {
+    width: 30%;
+   margin: auto;
+   text-align: center;
+   color: #fff;
+    border-radius: 10px;
+}
+
+section.services div.starter h2,
+section.services div.starter p,
+section.services div.starter h3 {
+    background: #555;
+}
+
+section.services div.enhanced h2,
+section.services div.enhanced p,
+section.services div.enhanced h3 {
+    background: #555;
+}
+
+section.services div.standarad h2,
+section.services div.standarad p,
+section.services div.standarad h3 {
+    background: #555;
+}
